fix: restore search route and improve navbar input contrast

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -69,6 +69,10 @@
       border: none
     &:focus
       background: #fff
+      color: #223745
+      &::placeholder
+        color: #4d6370
+        opacity: 0.7
 
   @media screen and (min-width: 1024px)
     .navbar-start
